<resources>
    <string name="byedpi_docs">https://github.com/hufrea/byedpi/blob/main/README.md</string>
    <string name="app_name">ByeByeDPI</string>
    <string name="cmd_documentation">Документация ByeDPI</string>
    <string name="toggle_connect">Вкл/Выкл</string>
    <string name="vpn_connect">Подключить</string>
    <string name="vpn_disconnect">Отключить</string>
    <string name="vpn_connected">Подключено (VPN)</string>
    <string name="vpn_disconnected">Отключено (VPN)</string>
    <string name="proxy_up">Подключено (Proxy)</string>
    <string name="proxy_down">Отключено (Proxy)</string>
    <string name="proxy_start">Старт</string>
    <string name="proxy_stop">Стоп</string>
    <string name="service_start_btn">Старт</string>
    <string name="service_pause_btn">Пауза</string>
    <string name="service_stop_btn">Стоп</string>
    <string name="service_paused_text">Приостановлен</string>
    <string name="open_editor">Открыть редактор</string>
    <string name="settings">Настройки</string>
    <string name="vpn_permission_denied">Нет разрешения на активацию VPN</string>
    <string name="settings_unavailable">Сначала отключитесь, чтобы зайти в настройки</string>
    <string name="title_settings">Настройки</string>
    <string name="save_logs">Сохранить логи</string>
    <string name="reset_settings">Сбросить</string>
    <string name="export_settings">Экспорт настроек</string>
    <string name="import_settings">Импорт настроек</string>
    <string name="logs_failed">Не удалось собрать логи</string>
    <string name="proxy_address">%1$s:%2$s</string>
    <string name="lang_settings">Язык</string>
    <string name="theme_settings">Тема</string>
    <string name="mode_setting">Режим</string>
    <string name="dbs_ip_setting">DNS</string>
    <string name="byedpi_version">ByeDPI</string>
    <string name="bye_dpi_proxy_ip_setting">Прослушиваемый IP</string>
    <string name="byedpi_proxy_port_setting">Порт</string>
    <string name="byedpi_http_connect_setting">HTTP прокси</string>
    <string name="byedpi_http_connect_summary">ByeDPI будет проксировать HTTPS или любой TCP трафик, кроме HTTP</string>
    <string name="byedpi_max_connections_setting">Максимальное к-во подключений</string>
    <string name="byedpi_buffer_size_setting">Размер буфера</string>
    <string name="byedpi_default_ttl_setting">TTL по умолчанию</string>
    <string name="byedpi_no_domain_setting">Без домена</string>
    <string name="byedpi_desync_method_setting">Метод десинхронизации</string>
    <string name="byedpi_split_position_setting">Позиция разделения</string>
    <string name="byedpi_split_at_host_setting">Разделить в хосте</string>
    <string name="byedpi_fake_ttl_setting">TTL поддельных пакетов</string>
    <string name="byedpi_host_mixed_case_setting">Смешанный регистр хоста</string>
    <string name="byedpi_domain_mixed_case_setting">Смешанный регистр домена</string>
    <string name="byedpi_host_remove_spaces_setting">Удалить пробелы из хоста</string>
    <string name="byedpi_tlsrec_enabled_setting">Разделить TLS запись</string>
    <string name="byedpi_tlsrec_position_setting">Позиция разделения TLS записи</string>
    <string name="byedpi_tlsrec_at_sni_setting">Разделить TLS запись в SNI</string>
    <string name="version">ByeByeDPI</string>
    <string name="source_code_link">Исходный код</string>
    <string name="byedpi_readme_link">Что все это значит?</string>
    <string name="failed_to_start">Не удалось запустить %1$s</string>
    <string name="vpn_channel_name">VPN</string>
    <string name="proxy_channel_name">Прокси</string>
    <string name="notification_title">ByeByeDPI</string>
    <string name="vpn_notification_content">VPN работает</string>
    <string name="proxy_notification_content">Прокси работает</string>
    <string name="general_category">Общие</string>
    <string name="byedpi_category">ByeDPI</string>
    <string name="about_category">О программе</string>
    <string name="command_line_editor">Редактор командной строки</string>
    <string name="ui_editor">Стандартный редактор</string>
    <string name="use_command_line_settings">Использовать командную строку</string>
    <string name="desync_http">Десинхронизация HTTP</string>
    <string name="desync_https">Десинхронизация HTTPS</string>
    <string name="desync_udp">Десинхронизация UDP</string>
    <string name="oob_data">OOB Данные</string>
    <string name="sni_of_fake_packet">SNI поддельного пакета</string>
    <string name="byedpi_proxy">Прокси</string>
    <string name="byedpi_desync">Десинхронизация</string>
    <string name="command_line_arguments">Аргументы командной строки</string>
    <string name="byedpi_hosts_mode_setting">Хосты</string>
    <string name="byedpi_hosts_blacklist_setting">Черный список хостов</string>
    <string name="byedpi_hosts_whitelist_setting">Белый список хостов</string>
    <string name="byedpi_tcp_fast_open_setting">TCP Fast Open</string>
    <string name="byedpi_udp_fake_count">Количество поддельных UDP</string>
    <string name="ipv6_setting">IPv6</string>
    <string name="byedpi_fake_offset_setting">Смещение поддельных пакетов</string>
    <string name="byedpi_drop_sack_setting">Отбрасывать SACK</string>
    <string name="desync_udp_category">UDP</string>
    <string name="desync_http_category">HTTP</string>
    <string name="desync_https_category">HTTPS</string>
    <string name="byedpi_protocols_category">Протоколы</string>
    <string name="byedpi_protocols_hint">Снимите все галочки, чтобы десинхронизировать весь трафик</string>
    <string name="automation">Автоматизация</string>
    <string name="autostart_settings">Автозапуск приложения при включении устройства</string>
    <string name="autohide_settings">Автоматически скрывать приложение после автозапуска</string>
    <string name="autoconnect_settings">Автоматическое подключение при открытии ByeByeDPI</string>
    <string name="applist_setting">Фильтр приложений</string>
    <string name="apps_select">Выбрать приложения</string>
    <string name="search_apps">Поиск приложений</string>
    <string name="storage_access">Доступ к файлам</string>
    <string name="storage_access_summary">Предоставьте доступ к хранилищу, если вы хотите использовать файлы в стратегиях</string>
    <string name="storage_access_allowed_summary">Разрешен</string>
    <string name="cmd_args_clear">Очистить</string>
    <string name="cmd_history_title">Список стратегий</string>
    <string name="cmd_history_title_summary">Нажмите для управления историей</string>
    <string name="cmd_history_delete_all">Очистить историю</string>
    <string name="cmd_history_delete_unpinned">Удалить незакрепленные</string>
    <string name="cmd_history_menu">Выберите действие</string>
    <string name="cmd_history_apply">Применить</string>
    <string name="cmd_history_copy">Копировать</string>
    <string name="cmd_history_rename">Переименовать</string>
    <string name="cmd_history_edit">Редактировать</string>
    <string name="cmd_history_pin">Закрепить</string>
    <string name="cmd_history_unpin">Открепить</string>
    <string name="cmd_history_pinned">Закреплено</string>
    <string name="cmd_history_delete">Удалить</string>
    <string name="telegram_link">Группа Telegram</string>
    <string name="title_test">Подбор стратегий (Beta)</string>
    <string name="summary_test">Тестирование работы подготовленных аргументов командной строки</string>
    <string name="test_start">Начать проверку</string>
    <string name="test_stop">Остановить проверку</string>
    <string name="test_disclaimer">
        Данный раздел предоставляет возможность протестировать работу приложения с помощью набора заранее подготовленных команд.
        \nВ процессе тестирования система проверяет доступность различных сайтов через прокси, и вы можете наблюдать за ходом выполнения в режиме реального времени.
        \n
        \nОбратите внимание, что функционал данного тестирования находится на этапе разработки, и набор команд пока что ограничен.
        \nРезультаты тестов могут быть полезны для предварительной оценки работы прокси, однако их успешное прохождение не гарантирует безупречную работу в реальных условиях.
    </string>
    <string name="test_crash">
        Приложение вылетело во время тестирования?
        \n\nПерейдите в настройки теста и увеличивайте время ожидания между проверками шагом в 2 секунды (2, 4, 6..).
    </string>
    <string name="test_process">Проверка %1$d/%2$d</string>
    <string name="test_proxy_error">Ошибка прокси. Тест остановлен</string>
    <string name="test_good_cmds">Стратегии с наилучшим результатом, применяйте от большего к меньшему</string>
    <string name="test_complete">Проверка завершена</string>
    <string name="test_complete_info">Нажмите на стратегию, чтобы скопировать ее или применить</string>
    <string name="test_settings_sni">SNI фейк пакетов</string>
    <string name="test_settings_fulllog">Вывод ответа хостов</string>
    <string name="test_settings_logclickable">Все стратегии кликабельны</string>
    <string name="test_settings_domain_lists">Списки доменов для проверки</string>
    <string name="test_settings_domain_empty">Нет доменов для проверки</string>
    <string name="test_settings_domains">Свой список доменов</string>
    <string name="test_settings_usercommands">Свой список стратегий</string>
    <string name="test_settings_commands">Список стратегий</string>
    <string name="test_delay">Ожидание между проверками</string>
    <string name="test_requests">Количество запросов к домену</string>
    <string name="test_timeout">Таймаут ответа домена</string>
</resources>
