<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:tag="byedpi_ui_settings">

    <Preference
        android:key="byedpi_readme"
        android:title="@string/byedpi_readme_link"
        android:icon="@drawable/ic_github_36">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="@string/byedpi_docs" />
    </Preference>

    <androidx.preference.PreferenceCategory
        android:title="@string/byedpi_proxy">

        <com.takisoft.preferencex.EditTextPreference
            android:key="byedpi_max_connections"
            android:title="@string/byedpi_max_connections_setting"
            android:inputType="number"
            android:defaultValue="512"
            app:useSimpleSummaryProvider="true" />

        <com.takisoft.preferencex.EditTextPreference
            android:key="byedpi_buffer_size"
            android:title="@string/byedpi_buffer_size_setting"
            android:inputType="number"
            android:defaultValue="16384"
            app:useSimpleSummaryProvider="true" />

        <CheckBoxPreference
            android:key="byedpi_no_domain"
            android:title="@string/byedpi_no_domain_setting"
            android:defaultValue="false" />

        <CheckBoxPreference
            android:key="byedpi_tcp_fast_open"
            android:title="@string/byedpi_tcp_fast_open_setting"
            android:defaultValue="false" />

    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory
        android:title="@string/byedpi_desync">

        <ListPreference
            android:key="byedpi_hosts_mode"
            android:title="@string/byedpi_hosts_mode_setting"
            android:entries="@array/byedpi_hosts_modes"
            android:entryValues="@array/byedpi_hosts_modes_entries"
            android:defaultValue="disable"
            android:summary="%s" />

        <com.takisoft.preferencex.EditTextPreference
            android:key="byedpi_hosts_blacklist"
            android:title="@string/byedpi_hosts_blacklist_setting"
            android:dialogTitle="@string/byedpi_hosts_blacklist_setting"
            android:inputType="textMultiLine"
            app:useSimpleSummaryProvider="true" />

        <com.takisoft.preferencex.EditTextPreference
            android:key="byedpi_hosts_whitelist"
            android:title="@string/byedpi_hosts_whitelist_setting"
            android:dialogTitle="@string/byedpi_hosts_whitelist_setting"
            android:inputType="textMultiLine"
            app:useSimpleSummaryProvider="true" />

        <com.takisoft.preferencex.EditTextPreference
            android:key="byedpi_default_ttl"
            android:title="@string/byedpi_default_ttl_setting"
            android:inputType="number"
            android:defaultValue="0"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            android:key="byedpi_desync_method"
            android:title="@string/byedpi_desync_method_setting"
            android:entries="@array/byedpi_desync_methods"
            android:entryValues="@array/byedpi_desync_methods_entries"
            android:defaultValue="oob"
            android:summary="%s" />

        <com.takisoft.preferencex.EditTextPreference
            android:key="byedpi_split_position"
            android:title="@string/byedpi_split_position_setting"
            android:inputType="numberSigned"
            android:defaultValue="1"
            app:useSimpleSummaryProvider="true" />

        <CheckBoxPreference
            android:key="byedpi_split_at_host"
            android:title="@string/byedpi_split_at_host_setting"
            android:defaultValue="false" />

        <CheckBoxPreference
            android:key="byedpi_drop_sack"
            android:title="@string/byedpi_drop_sack_setting"
            android:defaultValue="false" />

        <com.takisoft.preferencex.EditTextPreference
            android:key="byedpi_fake_ttl"
            android:title="@string/byedpi_fake_ttl_setting"
            android:inputType="number"
            android:defaultValue="8"
            app:useSimpleSummaryProvider="true" />

        <com.takisoft.preferencex.EditTextPreference
            android:key="byedpi_fake_offset"
            android:title="@string/byedpi_fake_offset_setting"
            android:inputType="number"
            android:defaultValue="0"
            app:useSimpleSummaryProvider="true" />

        <com.takisoft.preferencex.EditTextPreference
            android:key="byedpi_fake_sni"
            android:title="@string/sni_of_fake_packet"
            android:defaultValue="www.iana.org"
            app:useSimpleSummaryProvider="true" />

        <com.takisoft.preferencex.EditTextPreference
            android:key="byedpi_oob_data"
            android:title="@string/oob_data"
            android:defaultValue="a"
            app:useSimpleSummaryProvider="true" />

    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory
        android:title="@string/byedpi_protocols_category">

        <CheckBoxPreference
            android:key="byedpi_desync_http"
            android:title="@string/desync_http"
            android:defaultValue="true" />

        <CheckBoxPreference
            android:key="byedpi_desync_https"
            android:title="@string/desync_https"
            android:defaultValue="true" />

        <CheckBoxPreference
            android:key="byedpi_desync_udp"
            android:title="@string/desync_udp"
            android:defaultValue="true" />

    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory
        android:title="@string/desync_http_category">

        <CheckBoxPreference
            android:key="byedpi_host_mixed_case"
            android:title="@string/byedpi_host_mixed_case_setting"
            android:defaultValue="false"/>

        <CheckBoxPreference
            android:key="byedpi_domain_mixed_case"
            android:title="@string/byedpi_domain_mixed_case_setting"
            android:defaultValue="false"/>

        <CheckBoxPreference
            android:key="byedpi_host_remove_spaces"
            android:title="@string/byedpi_host_remove_spaces_setting"
            android:defaultValue="false"/>

    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory
        android:title="@string/desync_https_category">

        <CheckBoxPreference
            android:key="byedpi_tlsrec_enabled"
            android:title="@string/byedpi_tlsrec_enabled_setting"
            android:defaultValue="false"/>

        <com.takisoft.preferencex.EditTextPreference
            android:key="byedpi_tlsrec_position"
            android:title="@string/byedpi_tlsrec_position_setting"
            android:inputType="numberSigned"
            android:defaultValue="0"
            app:useSimpleSummaryProvider="true" />

        <CheckBoxPreference
            android:key="byedpi_tlsrec_at_sni"
            android:title="@string/byedpi_tlsrec_at_sni_setting"
            android:defaultValue="false" />

    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory
        android:title="@string/desync_udp_category">

        <com.takisoft.preferencex.EditTextPreference
            android:key="byedpi_udp_fake_count"
            android:title="@string/byedpi_udp_fake_count"
            android:inputType="number"
            android:defaultValue="1"
            app:useSimpleSummaryProvider="true" />

    </androidx.preference.PreferenceCategory>

</PreferenceScreen>
