<?xml version="1.0" encoding="utf-8" ?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.MainActivity">

    <item
        android:id="@+id/action_export_settings"
        android:orderInCategory="1"
        android:title="@string/export_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_import_settings"
        android:orderInCategory="2"
        android:title="@string/import_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_reset_settings"
        android:orderInCategory="3"
        android:title="@string/reset_settings"
        app:showAsAction="never" />

</menu>
